--- a/escola/templates/disciplinar/visualizar_rfo.html
+++ b/escola/templates/disciplinar/visualizar_rfo.html
@@ -83,6 +83,34 @@
                 <input type="text" class="form-control" value="{{ rfo.responsavel_registro_username }}" readonly>
             </div>
             <div class="form-group">
+                <label>Trata-se de um RFO de?</label>
+                <div class="radio-buttons">
+                    <label {% if rfo['Ocorrencia'].tipo_rfo == 'Elogio' %}class="active"{% endif %}>
+                        <input type="radio" disabled {% if rfo['Ocorrencia'].tipo_rfo == 'Elogio' %}checked{% endif %}>
+                        Elogio
+                    </label>
+                    <label {% if rfo['Ocorrencia'].tipo_rfo != 'Elogio' %}class="active"{% endif %}>
+                        <input type="radio" disabled {% if rfo['Ocorrencia'].tipo_rfo != 'Elogio' %}checked{% endif %}>
+                        Falta Disciplinar
+                    </label>
+                </div>
+            </div>
+            {% if rfo['Ocorrencia'].tipo_rfo == 'Elogio' %}
+            <div class="form-group">
+                <label>Tipo de Elogio</label>
+                <div class="radio-buttons">
+                    <label {% if rfo['Ocorrencia'].subtipo_elogio == 'Individual' %}class="active"{% endif %}>
+                        <input type="radio" disabled {% if rfo['Ocorrencia'].subtipo_elogio == 'Individual' %}checked{% endif %}>
+                        Individual
+                    </label>
+                    <label {% if rfo['Ocorrencia'].subtipo_elogio == 'Coletivo' %}class="active"{% endif %}>
+                        <input type="radio" disabled {% if rfo['Ocorrencia'].subtipo_elogio == 'Coletivo' %}checked{% endif %}>
+                        Coletivo
+                    </label>
+                </div>
+            </div>
+            {% else %}
+            <div class="form-group">
                 <label>Considerado como Advertência Oral?</label>
                 <div class="radio-buttons">
                     <label {% if rfo['Ocorrencia'].advertencia_oral == 'sim' %}class="active"{% endif %}>
@@ -94,6 +122,8 @@
                         <i class="fas fa-times-circle"></i> Não
                     </label>
                 </div>
+            </div>
+            {% endif %}
             </div>
         </div>
 
