--- a/escola/templates/disciplinar/fmd_novo_pdf.html
+++ b/escola/templates/disciplinar/fmd_novo_pdf.html
@@ -65,7 +65,9 @@
     <div class="texto-informativo">
         Senhor(a) responsável, informamos que no dia <b>
         {% if rfo.data_ocorrencia %}{{ rfo.data_ocorrencia | datetimeformat("%d/%m/%Y") }}{% endif %}
-        </b>, o estudante recebeu uma Notificação de Medida Disciplinar de Natureza <b>{{ fmd.medida_aplicada }}</b>, que poderá ocasionar perda de créditos. O período recursal está previsto no Regulamento Disciplinar das EECM. A defesa poderá ser feita por escrito, no prazo de <b>3 (três) dias úteis</b> a contar do recebimento da Notificação. A Medida Disciplinar será efetivada ou arquivada conforme despacho do gestor competente.
+        o estudante recebeu uma Notificação de Medida Disciplinar de Natureza <b>{{ fmd.tipo_falta }}</b>, 
+        que poderá ocasionar perda de créditos. O período recursal está previsto no Regulamento Disciplinar das EECM. A defesa poderá ser feita por escrito, no prazo de <b>3 (três) dias úteis</b> 
+        a contar do recebimento da Notificação. A Medida Disciplinar será efetivada ou arquivada conforme despacho do gestor competente.
     </div>
     <div class="texto-falta">
         O estudante supracitado cometeu a seguinte falta disciplinar: {{ rfo.relato_observador }}
