--- a/escola/templates/cadastros/dados_documentos.html
+++ b/escola/templates/cadastros/dados_documentos.html
@@ -78,7 +78,7 @@
 
               <div style="margin-top:12px;">
                 <label class="form-label">Logotipo do Estado/Prefeitura</label>
-                <input type="file" name="logo_prefeitura" accept="image/*" class="form-control">
+                <input type="file" name="logo_secretaria" accept="image/*" class="form-control">
                 <div id="preview-logo-prefeitura" style="margin-top:8px;"></div>
               </div>
             </div>
@@ -220,7 +220,7 @@
     });
   }
   preview('logo_estado', 'preview-logo-estado');
-  preview('logo_prefeitura', 'preview-logo-prefeitura');
+  preview('logo_secretaria', 'preview-logo-secretaria');
   preview('logo_escola', 'preview-logo-escola');
 })();
 </script>
