Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/formularios/fmd.html
+++ b/escola/templates/formularios/fmd.html
@@ -34,6 +34,20 @@
         </div>
     </div>
 
+        <div class="secao-documento">
+        <h3 class="titulo-secao">Comportamento e Pontuação na Data do Despacho</h3>
+        <div class="grid-info">
+            <div class="info-item">
+                <span class="label">Comportamento:</span>
+                <span class="valor">{{ pontuacao_info.comportamento }}</span>
+            </div>
+            <div class="info-item">
+                <span class="label">Pontuação:</span>
+                <span class="valor">{{ pontuacao_info.pontuacao }}</span>
+            </div>
+        </div>
+    </div>
+
     <div class="secao-documento">
         <h3 class="titulo-secao">Dados da Medida Disciplinar</h3>
         <div class="grid-info">
