--- a/escola/templates/disciplinar/visualizar_rfo.html
+++ b/escola/templates/disciplinar/visualizar_rfo.html
@@ -34,6 +34,7 @@
 {% endblock %}
 
 {% block content %}
+Pontuação do aluno na data deste RFO: {{ pontuacao_historica }}
 <div class="main-content-inner">
     <h2>Visualizar Relatório de Fato Observado (RFO)</h2>
     
