--- a/escola/templates/disciplinar/tratar_rfo.html
+++ b/escola/templates/disciplinar/tratar_rfo.html
@@ -298,6 +298,15 @@
                         </label>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label for="prazo_comparecimento">Prazo para comparecimento</label>
+                    <input type="date" id="prazo_comparecimento" name="prazo_comparecimento"
+                        class="form-control"
+                        value="{{ ocorrencia.prazo_comparecimento if ocorrencia.prazo_comparecimento else '' }}"
+                        {% if ocorrencia.status == 'TRATADO' %}readonly{% endif %}>
+                    <small class="help-text">Se necessário, informe a data limite para o comparecimento do responsável.</small>
+                </div>
             </fieldset>
             {% endif %}
 
